Bug 85858 - Impossible to change row height by dragging if a table has more than one row (64-bit specific)
Summary: Impossible to change row height by dragging if a table has more than one row ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha1
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: target:4.5.0 target:4.4.0.0.beta2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-11-04 12:42 UTC by Maxim Monastirsky
Modified: 2015-08-08 14:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2014-11-04 12:42:56 UTC
Steps to reproduce:

1. Open Writer and add a table.
2. Try to increase row height by dragging its border.

Tested with today's master. Works as expected in 4.3.3.2.
Comment 1 Cor Nouws 2014-11-04 13:09:32 UTC
Hi Maxim,

I _can't_ confirm in Version: 4.4.0.0.alpha1+
Build ID: d9473f25380c627966b4406cc4cdfaafcf44bc37
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-11-03_04:23:39

Cheers,
Cor
Comment 2 Maxim Monastirsky 2014-11-04 13:34:42 UTC
Thanks Cor.

Now I noticed that it works when the table has only one row. Maybe you tried with one row?
Comment 3 Cor Nouws 2014-11-04 14:02:12 UTC
I tried with two and now three. No problem here (32 bits)
Comment 4 V Stuart Foote 2014-11-04 15:33:12 UTC
Focus must be inside one of the the table cells for the height adjustment to "take". Otherwise works for me.
Comment 5 Maxim Monastirsky 2014-11-04 20:50:37 UTC
(In reply to V Stuart Foote from comment #4)
> Focus must be inside one of the the table cells for the height adjustment to
> "take".
Yes that's what I'm doing, and it doesn't work.

I tested on 2 installations:
- My own build (abc22a091c27b92c5b20964375098faa11d3546e) under Fedora 20 (64-bit) with KDE.
- 2014-11-03_23.45.36 build of @46 tb, under Fedora 21 (64-bit) with GNOME Shell.

BUT it works for me with:
2014-11-04_00.06.27 build of @51 tb under Windows 7. So I wonder whether it's 64-bit specific? (Cor mentioned he has 32-bit)

@V Stuart Foote: What platform did you use for testing?
Comment 6 Maxim Monastirsky 2014-11-04 21:17:31 UTC
Confirmed, it's indeed seems like 64-bit specific:

- Kubuntu 14.10 32-bit livecd + 2014-11-04_00.14.41 build of @45 tb - Works.
- Kubuntu 14.10 64-bit livecd + 2014-11-03_23.45.36 build of @46 tb - does NOT work.
Comment 7 V Stuart Foote 2014-11-04 21:20:56 UTC
(In reply to Maxim Monastirsky from comment #5)
> @V Stuart Foote: What platform did you use for testing?
Windows 7 sp1, 64-bit en-US with 32-bit TB39 daily of master

Give me a tic and I'll poke at a 64-bit Linux.
Comment 8 V Stuart Foote 2014-11-04 22:53:50 UTC
Reproduce on Fedora 20, 64-bit GNOME 3 DE
with
Version: 4.4.0.0.alpha1+
Build ID: ad6d94009cf8ea526eb70bf1a07e5c6a21320f83
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-11-03_23:45:36


works correctly on Fedora 20, 32-bit GNOME 3 De
with
Version: 4.4.0.0.alpha1+
Build ID: ad6d94009cf8ea526eb70bf1a07e5c6a21320f83
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-11-04_00:14:41

Interesting with the 64-bit build, that the vertical ruler that when table object is selected active, should show the row height positions for the entire table. Instead it seems unstable and will sometimes show the current row and sometimes the height of the entire table. Something is definitely off with the build.
Comment 9 Michael Stahl 2014-11-25 17:15:37 UTC
bibisect range: ecbc20d0c7d58c3c6cd0e1c517848157107120a0..efea971d33d83b39bcb883da51cc204a981897f9

regression from:

commit 4c60f722afdc0be5c129ce5f5ed6786d09d0051e
Author:     Matteo Casalin <matteo.casalin@yahoo.com>
AuthorDate: Sun Jun 29 22:43:59 2014 +0200
Commit:     Matteo Casalin <matteo.casalin@yahoo.com>
CommitDate: Tue Jul 22 23:50:39 2014 +0200

    sal_uInt16 to more proper types, constify, avoid unneeded casts

specifically in viewtab.cxx the initalization of SvxColumnDescription::nEndMax used to cast to sal_uInt16 but now the LONG_MAX from writer is passed through and eventually converted to 0.

fixed on master
Comment 10 Commit Notification 2014-11-25 17:15:44 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d288ee633d7964cf89a32a96e6e0af8c3c3e0db9

fdo#85858: svx: fix mouse dragging of table row separators in Writer

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-11-25 17:20:05 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a6b8f5a4541f2dc6375c0c449b9bc83235ed4193&h=libreoffice-4-4

fdo#85858: svx: fix mouse dragging of table row separators in Writer

It will be available in 4.4.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.