fdo#85858: svx: fix mouse dragging of table row separators in Writer

Add a work-around for Writer's usage of LONG_MAX to SvxColumnDescription:
on 64-bit platforms the LONG_MAX added in SwView::StateTabWin() for
SID_RULER_ROWS will overflow in vcl's LogicToPixel mapping and that
causes wrong positioning of the row highlight lines.

Probably Writer should use something other than LONG_MAX (no reason why
these types need to be bigger than 32-bit anyway) but that needs a
bigger cleanup.

(regression from 4c60f722afdc0be5c129ce5f5ed6786d09d0051e)

Change-Id: I08147462356368d48959a85a85ef7dd8dcae0943